# AoCHelper

./: .clang-format  .gitignore  AoCHelper.cc  CMakeLists.txt  README.md  boilerplate_code_generator.sh  helper_functions.h  main.cc
.devcontainer/: Dockerfile  devcontainer.json
src/: AoCHelper.cc  AoCHelper.h  helper_functions.cc  helper_functions.h
tests/: AocHelper_test.cc
tools/: boilerplate_code_generator.sh
